fix: add newline between blog items in README

--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -22,7 +22,7 @@ jobs:
           committer_username: "blog-post-bot"
           committer_email: "blog-post-bot@example.com"
           commit_message: "Updated with latest Version One Newsletter posts"
-          template: '- [$title]($url)'
+          template: "$newline- [$title]($url)"
           gh_token: ${{ secrets.GITHUB_TOKEN }}
 
 
